# react-native-reshuffled

./: CHANGELOG.md  NitroReshuffle.podspec  README.md  nitro.json  package-lock.json  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  fix-prefab.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/reshuffle/: NitroReshufflePackage.kt
cpp/: HybridReshuffle.cpp  HybridReshuffle.hpp  OldHybridReshuffleCPP.txt  OldHybridReshuffleHPP.txt
example/: app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example/app/: index.tsx
example/mocks/: configurations.ts  puzzleResolve.ts  sizes.ts
src/: index.ts  index.web.ts
src/algorithm/: algorithmJS.ts  index.ts
src/components/: GridPropsContextProvider.tsx
src/components/DraggableRectangle/: index.tsx  utils.ts
src/components/ReshufflableGrid/: ReshufflableGridCore.tsx  index.tsx  index.web.tsx  types.tsx  useReshufflableGrid.ts  utils.ts
src/specs/: Reshuffle.nitro.ts
